# Kidney-disease-classification

./: .gitignore  README.md  main.py  params.yaml  pyproject.toml  requirements.txt  setup.py  template.py
research/: 01_data_ingestion.ipynb  trials.ipynb
src/cnnClassifier/components/: data_ingestion.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/pipeline/: stage_01_data_ingestion.py
src/cnnClassifier/utils/: common.py
