[tool.poetry]
name = "kidney-disease-classification"
version = "0.1.0"
description = ""
authors = ["dhruvalgupta2003 <dhruvalgupta2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
setuptools = "^75.8.0"
pandas = "^2.2.3"
dvc = "^3.59.0"
notebook = "^7.3.2"
numpy = "^2.2.2"
matplotlib = "^3.10.0"
plotly = "^6.0.0"
seaborn = "^0.13.2"
pyyaml = "^6.0.2"
tqdm = "^4.67.1"
joblib = "^1.4.2"
types-pyyaml = "^6.0.12.20241230"
scipy = "^1.15.1"
flask = "^3.1.0"
flask-cors = "^5.0.0"
gdown = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
create-template = "python template.py"   # command to create template directory structure for project